# pag-flutter

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle
android/src/main/assets/: voice_new.pag
example/: pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/data/: bg_banner_bmp.pag  large.pag  splash.pag
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/ohos/: build-profile.json5  oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/: oh-package.json5
example/ohos/entry/src/main/resources/base/element/: string.json
ios/: flutter_pag_plugin.podspec  pag.podspec
ios/Classes/: FlutterPagPlugin.h  FlutterPagPlugin.m  ReuseItem.h  ReuseItem.m  TGFlutterPagDownloadManager.h  TGFlutterPagDownloadManager.m  TGFlutterPagRender.h  TGFlutterPagRender.mm  TGFlutterWorkerExecutor.h  TGFlutterWorkerExecutor.m
lib/: PagView.dart  TGPagView.dart  pag.dart  pag_image.dart  pag_image_info.dart  pag_image_provider.dart  pag_image_widget.dart  pag_view.dart
ohos/: build-profile.json5  index.ets  oh-package.json5
ohos/src/main/: module.json5
ohos/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos/src/main/cpp/types/libflutter_ohos_texture_patch/: Index.d.ts  oh-package.json5
ohos/src/main/ets/components/plugin/: FlutterPagPlayer.ets  FlutterPagPlugin.ets
test/: flutter_pag_plugin_test.dart
(+13 files in other folders)
